# globalize

./: .gitignore  Cargo.toml  README.md  build.rs
scripts/: README.md  cldr_dates.py  cldr_numbers.py  download_import_cldr.py  dump_data.py  import_cldr.py  localedata.py  plural.py
src/: lib.rs
