[package]
name = "globalize"
version = "0.1.0"
authors = ["A.J. Gardner <aaron.j.gardner@gmail.com>"]
build = "build/mod.rs"

[build-dependencies]
rmp = "0.8.7"
serde = "1.0"
serde_json = "1.0"
rmp-serde = "0.13.7"

[dependencies]
lazy_static = "1.0"
regex = "0.2.10"
rmp = "0.8.7"
serde = "1.0"
rmp-serde = "0.13.7"
gtld-data = "0.4.1"
